Disclosure title and arrow icon alignment fix
Also arrow will now stay at the top/first sentence if it becomes a multiline summary

--- a/packages/components/src/Disclosure/Disclosure.css
+++ b/packages/components/src/Disclosure/Disclosure.css
@@ -37,11 +37,12 @@
 }
 
 .summaryWrap {
+  align-items: baseline;
   display: flex;
 }
 
 .summaryWrap h4 {
-  flex: 1 0 auto;
+  flex: 1 0 0;
 }
 
 .content {
